infrastructure/base/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: data
spec:
  selector:
    app: adminer
  ports:
    - port: 80
      targetPort: 8080
