infrastructure/base/adminer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: data
spec:
  ingressClassName: traefik
  rules:
    - host: ${ADMINER_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 80
